--- a/vue/index.html
+++ b/vue/index.html
@@ -4,15 +4,35 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="/favicon.ico" />
-    <title>Vanta Rides | Luxury Private Transportation</title>
+
+    <!-- Favicon -->
+    <link rel="icon" href="/favicon.ico" type="image/x-icon" />
+
+    <!-- Page Title -->
+    <title>Vanta Rides | Premium Black SUV Service in Dallas</title>
+
+    <!-- SEO Meta Tags -->
+    <meta name="description" content="Vanta Rides LLC is a luxury black SUV transportation service based in Dallas, TX. Book a professional, private ride today." />
+    <meta name="keywords" content="Dallas SUV service, black car Dallas, executive transportation Dallas, Vanta Rides" />
+    <meta name="author" content="Vanta Rides LLC" />
+
+    <!-- Open Graph / Facebook / LinkedIn -->
+    <meta property="og:title" content="Vanta Rides" />
+    <meta property="og:description" content="Luxury Black SUV Transportation Based in Dallas, TX" />
+    <meta property="og:image" content="/favicon.ico" />
+    <meta property="og:url" content="https://vantarides.com" />
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary" />
+
+    <!-- Main Script -->
     <script type="module" src="/src/main.js"></script>
   </head>
+
   <body>
     <noscript>
       <strong>We're sorry, but Vanta Rides doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
     <div id="app"></div>
-    <!-- built files will be auto injected -->
   </body>
 </html>
